tests/files/type_checker_tests/should_pass/078.cmdr
//Test that post-increment operations type check
a = [2, 3, 4];
x = 1;
y = a[x]++;
