tests/files/type_checker_tests/should_fail/106.cmdr
//Should fail post-increment on something of incorrect type
a = [true, false, true];
a[1]++;
